force-app/main/default/objects/Timesheet__c/Timesheet__c.object-meta.xml
<CustomObject>
    <description>Weekly governed time envelope for one Resource 360 practitioner.</description>
    <label>Timesheet</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Timesheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>