force-app/main/default/objects/Timesheet__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Approval Step</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>