force-app/main/default/objects/Timesheet__c/fields/Auto_Approved__c.field-meta.xml
<CustomField><fullName>Auto_Approved__c</fullName><defaultValue>false</defaultValue><label>Auto Approved</label><trackHistory>true</trackHistory><type>Checkbox</type></CustomField>