force-app/main/default/objects/Timesheet__c/fields/Correction_Parent__c.field-meta.xml
<CustomField><fullName>Correction_Parent__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Correction Parent</label><referenceTo>Timesheet__c</referenceTo><relationshipLabel>Timesheet Corrections</relationshipLabel><relationshipName>Timesheet_Corrections</relationshipName><type>Lookup</type></CustomField>