force-app/main/default/objects/Timesheet__c/fields/Correction_Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Correction_Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correction Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requested_Resource360_Corrections</relationshipName>
    <type>Lookup</type>
</CustomField>