force-app/main/default/objects/Timesheet__c/fields/Decision_At__c.field-meta.xml
<CustomField>
    <fullName>Decision_At__c</fullName>
    <label>Decision At</label>
    <type>DateTime</type>
</CustomField>