force-app/main/default/objects/Timesheet__c/fields/Decision_Due_At__c.field-meta.xml
<CustomField><fullName>Decision_Due_At__c</fullName><label>Decision Due At</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>