force-app/main/default/objects/Timesheet__c/fields/Dual_Control_Required__c.field-meta.xml
<CustomField>
    <fullName>Dual_Control_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dual Control Required</label>
    <type>Checkbox</type>
</CustomField>