force-app/main/default/objects/Timesheet__c/fields/Due_At__c.field-meta.xml
<CustomField><fullName>Due_At__c</fullName><label>Due At</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>