force-app/main/default/objects/Timesheet__c/fields/Escalated_At__c.field-meta.xml
<CustomField><fullName>Escalated_At__c</fullName><label>Escalated At</label><trackHistory>true</trackHistory><type>DateTime</type></CustomField>