force-app/main/default/objects/Timesheet__c/fields/Exception_Code__c.field-meta.xml
<CustomField><fullName>Exception_Code__c</fullName><label>Exception Code</label><length>255</length><trackHistory>true</trackHistory><type>Text</type></CustomField>