force-app/main/default/objects/Timesheet__c/fields/Required_Approval_Role__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Role__c</fullName>
    <label>Required Approval Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>