force-app/main/default/objects/Timesheet__c/fields/Week_Key__c.field-meta.xml
<CustomField>
    <fullName>Week_Key__c</fullName>
    <externalId>true</externalId>
    <label>Week Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>