force-app/main/default/objects/Timesheet__c/fields/Week_Start__c.field-meta.xml
<CustomField>
    <fullName>Week_Start__c</fullName>
    <label>Week Start</label>
    <required>true</required>
    <type>Date</type>
</CustomField>