force-app/main/default/objects/Timesheet__c/validationRules/Monday_Week_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Monday_Week_Start</fullName>
    <active>true</active>
    <errorConditionFormula>WEEKDAY(Week_Start__c) &lt;&gt; 2</errorConditionFormula>
    <errorMessage>Resource 360 timesheets use a Monday week start.</errorMessage>
</ValidationRule>